--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Blog -  Moda e variedades</title>
-    <link rel="icon" href="./imagens/icons8-logo-da-huawei-64.png" type="image/x-icon">
+    <link rel="icon" href=".//icons8-logo-da-huawei-64.png" type="image/x-icon">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
         <center>
 
             <Strong><H1>    𝕱𝖆𝖘𝖍𝖎𝖔𝖓 𝖇𝖑𝖔𝖌 - 𝕸𝖔𝖉𝖆 𝖊 𝖛𝖆𝖗𝖎𝖊𝖉𝖆𝖉𝖊𝖘     </H1/Strong>
-                <img src = "imagens/logo.png" width="500" height="500">
+                <img src = "/logo.png" width="500" height="500">
 
         
    
@@ -28,9 +28,9 @@
 <h2> Iremos ver em 2023 muitas peças com detalhes! </h2>
 <br>
 <br>
-<img src = "imagens/saia-midi.jpg" width="300" height="300">
-<img src = "imagens/alfaiataria.jfif" width="300" height="300">
-<img src = "imagens/pantalona.webp" width="300" height="300">
+<img src = "/saia-midi.jpg" width="300" height="300">
+<img src = "/alfaiataria.jfif" width="300" height="300">
+<img src = "/pantalona.webp" width="300" height="300">
 <br>
 <br>
 <h2>TENDÊNCIAS DE PRIMAVERA, VERÃO E INVERNO PARA APROVEITAR NO OUTLET PREMIUM!!</h2>
@@ -40,17 +40,17 @@
 </div>
 
 <br>
-<img src = "imagens/verao.webp"300" height="300">
+<img src = "/verao.webp"300" height="300">
 <br>
 <br>
 <a href="Primavera.html">Primavera</a>
 <br>
-<img src = "imagens/primavera modelo.jpg" height="300">
+<img src = "/primavera modelo.jpg" height="300">
 <br>
 <a href="inverno.html">inverno</a>
 <br>
 
-<img src = "imagens/estilo-neve-425x318.jpg" height="300">
+<img src = "/estilo-neve-425x318.jpg" height="300">
 
 </center>
 
